--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,7 +5,7 @@ h1 {
     padding-top: 2vh;
   }
   
-h2 {
+.titleHome {
     padding-top: 2vh;
   }
   
@@ -19,5 +19,5 @@ h2 {
 .basDePage{
     max-width: 100%;
     height: auto;
-    margin-top: 10%;
+    margin-top: 1%;
 }
