--- a/src/components/LinkTechno.css
+++ b/src/components/LinkTechno.css
@@ -2,11 +2,11 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
+    width: 100%;
   }
   
 .LogoTechno{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
