--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+
 .App {
     font-family: sans-serif;
     text-align: center;
@@ -5,4 +6,46 @@
     flex-direction: column;
     height: 100vh;
   }
+  .loading-animation {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 400px;
+  }
   
+  .loading-animation > div {
+    margin: 1px;
+    animation: loading 2s infinite;
+  }
+  
+  .loading-animation > div:nth-child(1) {
+  }
+  
+  .loading-animation > div:nth-child(2) {
+    animation-delay: 0.1s;
+  }
+  .loading-animation > div:nth-child(3) {
+    animation-delay: 0.2s;
+  }
+  .loading-animation > div:nth-child(4) {
+    animation-delay: 0.3s;
+  }
+  .loading-animation > div:nth-child(5) {
+    animation-delay: 0.4s;
+  }
+  .loading-animation > div:nth-child(6) {
+    animation-delay: 0.5s;
+  }
+  .loading-animation > div:nth-child(7) {
+    animation-delay: 0.6s;
+  }
+  
+  
+  @keyframes loading {
+    0% {
+      transform: translate(0, 0);
+    }
+    50% {
+      transform: translate(0px, 100px);
+    }
+  }
