--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,29 +9,27 @@
     list-style: none;
     font-size: 1.7rem;
     padding-right: 1vh;
-    color: rgba(0, 0, 0, 0.9) !important;
+    color: #54514D !important;
   }
   
   .NavbarLink {
     font-size: 1.2rem;
     padding: 1vh;
-    color: rgba(0, 0, 0, 0.5);
+    color: #54514D;
   }
   
   .NavbarTitle:hover {
-    color: rgba(0, 0, 0, 0.9) !important;
+    color: #54514D !important;
   }
   
   .NavbarLink:hover {
-    color: rgba(0, 0, 0, 0.5);
+    color: #54514D;
   }
   
   .navbar-collapse {
     display: flex;
   }
   
-  /*---------For change the img of menu burger---------*/
-  /* .navbar-toggler-icon {
-    background-image: url("https://user-images.githubusercontent.com/57908921/85213243-f7434c00-b35b-11ea-84c4-6dca0b284e04.png") !important;
-  } */
-  
+.test{
+  margin: auto;
+}
